# foodshare

./: .gitignore  .gitmodules  CONTRIBUTING.md  First_version_conversation.py  README.md  gif_test.py  main.py  pyproject.toml  run_bot.py  setup.cfg  telegramcalendar.py  telegramcost.py  telegramhour.py  telegramnumber.py
BDD/: helping_functions.py
commands/: cook.py  gif_test.py
foodshare/: __init__.py
foodshare/BDD/: DB.py  database.db  helping_functions.py  test.py
foodshare/bdd/: create_test_database.py  database_communication.py  tables_declaration.py
foodshare/commands/: cook.py  gif_test.py
foodshare/handlers/: error_handler.py
foodshare/handlers/balances_conversation/: __init__.py  balance_action.py  balances_handler.py  first_message.py
foodshare/handlers/community_conversation/: __init__.py  community_action.py  community_handler.py  first_message.py  join_community.py
foodshare/handlers/cook_conversation/: __init__.py  conclusion_selection.py  cook_handler.py  cost_selection.py  date.py  date_selection.py  date_time.py  meal_name.py  meal_name_choice.py  nb_of_person_selection.py  number_of_person_selection.py  (+2 more)
foodshare/job_manager/: job_routine.py  meal_manager.py
foodshare/keyboards/: __init__.py  confirmation_keyboard.py  digit_list.py  meal_selection.py  reminder_keyboard.py  reminderkeyboard.py  telegram_calendar.py  telegram_cost.py  telegram_hour.py  telegram_number.py  telegramcost.py  telegramhour.py  telegramnumber.py  user_selection.py
foodshare/utils/: __init__.py
keyboards/: telegramcost.py  telegramhour.py
(+17 files in other folders)
