[tool.poetry]
name = "foodshare"
version = "0.1.0"
description = "Help people cook together with a chatbot"
authors = [
    "Corentin Bisot <corentin@bisot.com>",
    "Pierre Guilmin <pierreguilmin@gmail.com>",
    "Julien Robert <julien.robert17@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
python-telegram-bot = "^12.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.11.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
colorama = "^0.4.3"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']
exclude = 'calendar-telegram'

[tool.isort]
multi_line_output = 3  # to be consistent with black formatting
include_trailing_comma = true  # to be consistent with black formatting
skip = 'calendar-telegram'
